--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
     font-family: Lato, sans-serif;
     font-size: 16px;
-    background-color: white;
-    background-image: url('../images/nature-blurred.jpg');
+    background-color: #f4f7f9;
+    /* background-color: #def1fb; */
+    /* background-image: url('../images/nature-blurred.jpg'); */
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
