--- a/css/style-red.css
+++ b/css/style-red.css
@@ -2,7 +2,7 @@ body {
     font-family: Lato, sans-serif;
     font-size: 16px;
     color: #931e1e;
-    background-color: white;
+    background-color: #f9f2f1;
     /* background-color: #def1fb; */
     /* background-image: url('../images/nature-blurred.jpg'); */
 }
