--- a/css/style.css
+++ b/css/style.css
@@ -428,8 +428,104 @@ fixed starting at tablet sizes */
     }
 }
 
-.google-sheet {
-    width: 100%;
+
+/* Media queries for the Google Doc iFrame so that the text inside 
+appears centered all the time*/
+
+@media only screen and (min-width: 1882px) {
+    .google-sheet {
+        width: 25%;
+    }
+}
+
+@media only screen and (min-width: 1720px) and (max-width: 1881px) {
+    .google-sheet {
+        width: 28%;
+    }
+}
+
+@media only screen and (min-width: 1521px) and (max-width: 1718px) {
+    .google-sheet {
+        width: 31%;
+    }
+}
+
+@media only screen and (min-width: 1361px) and (max-width: 1520px) {
+    .google-sheet {
+        width: 35%;
+    }
+}
+
+@media only screen and (min-width: 1199px) and (max-width: 1360px) {
+    .google-sheet {
+        width: 40%;
+    }
+}
+
+@media only screen and (min-width: 1066px) and (max-width: 1198px) {
+    .google-sheet {
+        width: 45%;
+    }
+}
+
+@media only screen and (min-width: 987px) and (max-width: 1065px) {
+    .google-sheet {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 901px) and (max-width: 986px) {
+    .google-sheet {
+        width: 55%;
+    }
+}
+
+@media only screen and (min-width: 826px) and (max-width: 900px) {
+    .google-sheet {
+        width: 65%;
+    }
+}
+
+@media only screen and (min-width: 719px) and (max-width: 825px) {
+    .google-sheet {
+        width: 65%;
+    }
+}
+
+@media only screen and (min-width: 642px) and (max-width: 718px) {
+    .google-sheet {
+        width: 75%;
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 641px) {
+    .google-sheet {
+        width: 80%;
+    }
+}
+
+@media only screen and (min-width: 563px) and (max-width: 599px) {
+    .google-sheet {
+        width: 85%;
+    }
+}
+
+@media only screen and (min-width: 529px) and (max-width: 562px) {
+    .google-sheet {
+        width: 90%;
+    }
+}
+
+@media only screen and (min-width: 502px) and (max-width: 528px) {
+    .google-sheet {
+        width: 95%;
+    }
+}
+
+@media only screen and (max-width: 501px) {
+    .google-sheet {
+        width: 100%;
+    }
 }
 
 
