Added loading spinner to the search pop-up on the Staff portal page. The load spinner activates when a user begins to type inside the input box.

--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,7 @@ h2 {
 }
 
 #search-modal-load-indicator {
+    visibility: hidden;
     position: absolute;
     float: left;
     color: #1e6c93;
