--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,18 @@ h2 {
     }
 }
 
+@media only screen and (max-width: 833px) {
+    .staff-dashboard-header {
+        margin-top: 0px;
+        /*Used to be 150px*/
+    }
+    .navigation-bar-header {
+        position: fixed;
+        background: #f4f7f9;
+        border-bottom: 5px solid #1e6c93;
+    }
+}
+
 
 /* Make the navigation bar responsive and
 fixed starting at tablet sizes */
