Added the ALL Links section back to the troubleshooting page.

--- a/css/style.css
+++ b/css/style.css
@@ -643,3 +643,8 @@ appears centered all the time*/
     font-size: 1.1em;
     border-radius: 10px;
 }
+
+.tutImageCaption {
+    color: #337AB7;
+    padding: 10px;
+}
