Added an inner container. Update the single CSS rule to change the button icon upon opening. However, the container content still does not display.

--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,7 @@ h2 {
     height: 100%;
 }
 
+#quickLinks-collapseToggle:checked+div.blue-section-innerContainer>div.section-header label>div.open-column-button::after,
 #quickLinks-collapseToggle:checked+div.section-header label>div.open-column-button::after,
 #standardStaffTools-collapseToggle:checked+div.section-header label>div.open-column-button::after,
 #administratorTools-collapseToggle:checked+div.section-header label>div.open-column-button::after,
