Fixed animation, but now the container content stil ldisplays even when the button is closed

--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ h2 {
 
 /* Animate opening and closing of rows */
 
+div.blue-section-innerContainer>.section-content,
 #quickLinksButtonRow,
 #standardStaffToolsButtonRow,
 #administratorToolsButtonRow,
@@ -172,6 +173,7 @@ h2 {
     transition: height, margin 0.5s;
 }
 
+#quickLinks-collapseToggle:checked+div.blue-section-innerContainer>div.section-content,
 #quickLinks-collapseToggle:checked~div#quickLinksButtonRow,
 #standardStaffTools-collapseToggle:checked~div#standardStaffToolsButtonRow,
 #administratorTools-collapseToggle:checked~div#administratorToolsButtonRow,
