Add conditional to only load add to home screen button in mobile firefox or in any instance of Chrome.

--- a/css/style.css
+++ b/css/style.css
@@ -784,6 +784,10 @@ p.tut-descr a.tutRef {
     transition: opacity 1s ease-in-out;
 }
 
+#addToHomeScreenButton {
+    display: none;
+}
+
 #addToHomeScreenButton:hover + .tooltip {
     /* visibility: visible; */
     opacity: 1;
