Edit CSS to match blueSectionNames for classroomToools

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,7 +174,7 @@ h2 {
 #standardStaffToolsButtonRow,
 #administratorToolsButtonRow,
 #teacherToolsButtonRow,
-#classroomProgramsButtonRow,
+#classroomToolsButtonRow,
 #webAdminButtonRow,
 #learningToolsButtonRow,
 #digitalTextbooksButtonRow,
@@ -194,7 +194,7 @@ h2 {
 #standardStaffTools-collapseToggle:checked~div#standardStaffToolsButtonRow,
 #administratorTools-collapseToggle:checked~div#administratorToolsButtonRow,
 #teacherTools-collapseToggle:checked~div#teacherToolsButtonRow,
-#classroomPrograms-collapseToggle:checked~div#classroomProgramsButtonRow,
+#classroomTools-collapseToggle:checked~div#classroomToolsButtonRow,
 #learningTools-collapseToggle:checked~div#learningToolsButtonRow,
 #digitalTextbooks-collapseToggle:checked~div#digitalTextbooksButtonRow,
 #mediaResources-collapseToggle:checked~div#mediaResourcesButtonRow,
@@ -216,7 +216,7 @@ h2 {
 #standardStaffTools-collapseToggle:checked+div.section-header label>div.open-column-button::after,
 #administratorTools-collapseToggle:checked+div.section-header label>div.open-column-button::after,
 #teacherTools-collapseToggle:checked+div.section-header label>div.open-column-button::after,
-#classroomPrograms-collapseToggle:checked+div.section-header label>div.open-column-button::after,
+#classroomTools-collapseToggle:checked+div.section-header label>div.open-column-button::after,
 #webAdmin-collapseToggle:checked+div.section-header label>div.open-column-button::after,
 #learningTools-collapseToggle:checked+div.section-header label>div.open-column-button::after,
 #digitalTextbooks-collapseToggle:checked+div.section-header label>div.open-column-button::after,
