Convert <div class='navigation-bar'> in NavigationBar component to a styled component.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,3 @@
-body {
-    font-family: Lato, sans-serif;
-    font-size: 16px;
-    background-color: #f4f7f9;
-    /* background-color: #def1fb; */
-    /* background-image: url('../images/nature-blurred.jpg'); */
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.container-fluid {
-    padding-left: 0;
-    padding-right: 0;
-}
-
 .navigation-bar-image-wrapper {
     margin-top: 5px;
 }
@@ -23,32 +6,6 @@ body {
     height: 100px;
     /* Was 50px */
     width: auto;
-}
-
-.navigation-bar-header {
-    position: relative;
-    width: 100%;
-    /* Bottom three BG-color and margin bottom rules, and border-bottom were not here before */
-    /* background-color: #f4f7f9; */
-    margin-bottom: 20px;
-    /* border-bottom: 1px solid #1e6c93; */
-    /* background-color: white; */
-    line-height: 1.0em;
-    padding: 6px 0;
-    z-index: 2;
-    /* Same as font size to vertically align an
-    element with float to its parent */
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f4f7f9+0,2989d8+0,f4f7f9+0,ffffff+100 */
-    background: #f4f7f9;
-    /* Old browsers */
-    background: -moz-linear-gradient(top, #f4f7f9 0%, #2989d8 0%, #f4f7f9 0%, #ffffff 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #f4f7f9 0%, #2989d8 0%, #f4f7f9 0%, #ffffff 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #f4f7f9 0%, #2989d8 0%, #f4f7f9 0%, #ffffff 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f4f7f9', endColorstr='#ffffff', GradientType=0);
-    /* IE6-9 */
 }
 
 .navigation-bar-wrapper {
@@ -62,11 +19,6 @@ body {
     /*-1/2 of line-height */
     right: 0px;
     padding-right: 2.5%;
-}
-
-.navigation-bar,
-.navigation-bar ul li {
-    display: inline-block;
 }
 
 .navigation-bar ul li {
@@ -147,7 +99,7 @@ h2 {
 .section-header h3 {
     font-size: 2em;
     display: inline;
-}
+}}
 
 
 .statusEmbed {
