--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ h2 {
 .section-header h3 {
     font-size: 2em;
     display: inline;
-}}
+}
 
 #teacherToolsButtonRow a button img {
     position: relative;
