--- a/public/css/css-reset.css
+++ b/public/css/css-reset.css
@@ -1,8 +1,18 @@
+/* Custom addition */
+html,
+body,
+#root {
+	position: relative;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+}
+
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
