Move the styling code to the App styled component.

--- a/public/css/css-reset.css
+++ b/public/css/css-reset.css
@@ -10,6 +10,7 @@ body,
 	display: flex;
 	flex: 1;/* no need anymore to deal with height/width */
 	flex-direction: column;
+	overflow: hidden;
 }
 
 
