--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,31 +1,9 @@
 
 /*  Whole entire scrollbar */
-html {
-    scrollbar-color: #1E6C93 white;
-    scrollbar-width: auto;
+#root {
+    overflow: hidden;
 }
      
-::-webkit-scrollbar {
-    width: 12px;
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
-    background-color: white;
-}
- 
-/*  Whole Scrollbar */
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 5px;
-    background-color: white;
-}
- 
-/*  Actual Scrollbar */
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-    background: #1E6C93;
-}
-
 body {
     transition: all 700ms ease-in-out !important;
 }
