--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,12 @@ body {
 }
 
 
+iframe {
+    display: block;  
+    width: 25%;
+    height: 100%;
+}
+
 .ReactModal__Overlay {
     opacity: 0;
     /* transform: scale(0.0); */
