--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
     transition: all 700ms ease-in-out !important;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 body.ReactModal__Body--open {
