Add overflow-y:auto css rule to the body and root element tofix for the time being the bug where the web app does not scroll.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
-body, #root {
+body, #cvuhsd-portal-app {
     transition: all 700ms ease-in-out !important;
     font-family: 'Source Sans Pro', sans-serif;
+
+    overflow-y: auto;
 }
 
 body.ReactModal__Body--open {
