--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,12 +6,12 @@ body, #cvuhsd-portal-app {
     
 }
 
-html {
+/* html {
     width: 100%;
     height: 100%;
     display: block;
-    /* table; */
-}
+    table; 
+} */
 
 body {
     width: 100%;
