--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,8 @@ iframe {
     /* transition: transform 700ms ease-in-out; */
 }
 
+
+/* Manage Engine Chat  */
 body > div#external_sdp_chat {
     background: rgb(51, 51, 51) none repeat scroll 0% 0%;
     border-radius: 4px;
@@ -83,7 +85,7 @@ body > div#external_sdp_chat {
     color: white;
     cursor: pointer;
     position: sticky !important;
-    left: 85%;
+    left: 99% !important;
     z-index: 2;
     height: 29px;
     width: 100px; 
@@ -92,7 +94,7 @@ body > div#external_sdp_chat {
 body > div#me_sdp_chat_content_div {
     bottom: 0px;
     position: sticky ! important;
-    left: 47% !important;
+    left: 99% !important;
     width: 360px !important;
     min-width: 360px;
     height: auto;
