Support request modal styling changes. Change require() statements to imports.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,10 @@ body {
     transition: 700ms filter linear;
 }
 
+body.transfer-to-it-modal-body--open {
+    overflow-y: hidden;
+}
+
 
 iframe {
     display: block;  
