Add animation to the react modal.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,37 +48,55 @@ iframe {
     height: 100%;
 }
 
+/* === TRANSFER TO IT MODAL === */
+/* Prevent there from being a scroll to the Transfer to IT Modal */
+.ReactModal__Html--open,
+.ReactModal__Body--open {
+    overflow: hidden;
+}
+
 .ReactModal__Overlay {
     opacity: 0;
-    /* transform: scale(0.0); */
-    transition: opacity 700ms ease-in-out;
-    /* transform 700ms ease-in-out; */
+    transition: opacity 300ms ease-in-out;
 }
 
+.ReactModal__Overlay--after-open{
+    opacity: 1;
+
+}
+
+.ReactModal__Overlay--before-close{
+    opacity: 0;
+}
+
+/* React Modal Content Animation */
 .ReactModal__Content {
-    transform: scale(0.0);
-    transition: opacity 700ms ease-in-out, transform 700ms ease-in-out
-    
-    /* opacity 700ms ease-in-out, transform 700ms ease-in-out */
-}
+    transform: scale(0) translate(-50%, -50%);
+    transform-origin: 0% 25%;
 
-.ReactModal__Overlay--after-open, .ReactModal__Content--after-open{
-    opacity: 1; 
+    max-height: 0px;
+    max-width: 0px;
+
+    transition: transform 300ms ease-in-out, max-width 300ms ease-in-out, max-height 300ms ease-in-out;
+
 }
 
 .ReactModal__Content--after-open {
-    transform: scale(3.0);
-}
+    transform: scale(1) translate(-50%, -50%);
+    transform-origin: 0% 25%;
 
-.ReactModal__Overlay--before-close, .ReactModal__Content--before-close{
-    opacity: 0;
-    /* transition: opacity 700ms ease-in-out, transform 700ms ease-in-out */
+    max-height: 500px;
+    max-width: 500px;
 }
 
 .ReactModal__Content--before-close {
-    transform: scale(0.0);
-    /* transition: transform 700ms ease-in-out; */
+    transform: scale(0) translate(-50%, -50%);
+    transform-origin: 0% 25%;
+
+    max-height: 0px;
+    max-width: 0px;
 }
+
 
 /* Prevent Buttons from having an outlined when clicked or focused */
 html > * button:focus {
