--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,15 +82,15 @@ iframe {
 }
 
 .ReactModal__Content--after-open {
-    transform: scale(1) translate(-50%, -50%);
+    transform: scale(1);
     transform-origin: 0% 25%;
 
-    max-height: 500px;
-    max-width: 500px;
+    max-height: 900px;
+    max-width: 900px;
 }
 
 .ReactModal__Content--before-close {
-    transform: scale(0) translate(-50%, -50%);
+    transform: scale(0);
     transform-origin: 0% 25%;
 
     max-height: 0px;
